@@ -1,6 +1,15 @@
 = Changelog
 :toc:
 
+== wip v0.33.0: New Features
+
+As the releases before, this release has 100% test coverage.
+Tested with Go 1.16, 1.17, 1.18, 1.19, 1.20, 1.21, 1.22, 1.23 and 1.24.
+
+=== New Features
+
+* Add `opt.SuggestedValuesFn` ModifyFn to dynamically set autocompletion suggestions for an option.
+
 == v0.32.0: Breaking Changes
 
 As the releases before, this release has 100% test coverage.
